fixed grid container + better alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --white-color: #fff;
-  --card-color: #cccccc;
+  --card-color: #F9f4EA;
 }
 
 * {
@@ -11,7 +11,7 @@
 
 header {
   display: flex;
-  height: 7em;
+  height: 5em;
   width: 100%;
   background-color: #30343f;
   margin-bottom: 2.5em;
@@ -35,7 +35,7 @@ header h1 {
   min-height: 100vh;
 }
 
-.card-container > section {
+section {
   border-radius: 1em;
   /* cursor: move; */
 }
@@ -43,25 +43,26 @@ header h1 {
 .card-inner {
   /* background-color: #fff; */
   padding: 0 1em;
-  color: var(--white-color);
+  /* color: var(--white-color); */
   font-weight: bold;
 }
 
 /* Cards */
 .cardGameInfo {
-  background-color: #ff0000;
+  background-color: var(--card-color);
   grid-area: span 2 / span 2;
 }
 
 .cardScore {
-  background-color: #00ff00;
+  background-color: var(--card-color);
   grid-area: span 4 / span 2;
   min-height: auto;
 }
 
 .cardConfig {
-  background-color: #0000ff;
+  background-color: var(--card-color);
   grid-area: span 2 / span 1;
+  height: 10em;
 }
 
 .cardTeam {
@@ -124,18 +125,70 @@ header h1 {
   background-color: #40fc40;
   border-radius: 0.3em;
 }
+
 .assist {
   padding: 0.2em 0.35em;
   background-color: #3f71fc;
   border-radius: 0.3em;
 }
+
 .block {
   padding: 0.2em 0.35em;
   background-color: #f14545;
   border-radius: 0.3em;
 }
+
 .turnover {
   padding: 0.2em 0.35em;
   background-color: #f7d643;
   border-radius: 0.3em;
+}
+
+
+@media (min-width: 48rem) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    /* grid-template-rows: 1fr 1fr;  */
+    grid-auto-rows: fit-content(1em);
+    gap: 12px 12px;
+    grid-template-areas:
+      "Config Game-info"
+      "Scoreboard cardteam1"
+      "Scoreboard cardteam2"
+      ;
+    height: 100vh;
+  }
+
+  /* Cards */
+  .cardGameInfo {
+    background-color: var(--card-color);
+    grid-area: Game-info;
+  }
+
+  .cardScore {
+    background-color: var(--card-color);
+    grid-area: Scoreboard;
+  }
+
+  .cardConfig {
+    background-color: var(--card-color);
+    grid-area: Config
+  }
+
+  .cardteam1 {
+    display: flex;
+    flex-direction: column;
+    background-color: wheat;
+    grid-area: cardteam1;
+  }
+
+  .cardteam2 {
+    display: flex;
+    flex-direction: column;
+    background-color: wheat;
+    grid-area: cardteam2;
+  }
+
+
 }
